<resources>
    <string name="app_name">Florenza</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username_edit">Username</string>
    <string name="password_edit">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
</resources>
